better responsive version

--- a/src/fountain.html
+++ b/src/fountain.html
@@ -23,24 +23,27 @@
     <div class="logos">
         <a class="github" href="https://github.com/EightMedia/TwitterFontana" target="_blank" title="Fork Twitter Fontana on GitHub"><img src="img/github.png" width="46" height="20" alt="GitHub"></a>
         <a class="eight" href="http://www.eight.nl/" target="_blank"><img src="img/eight.png" width="55" height="20" alt="Eight Media Internetbureau Arnhem" title="Webdesign &amp; Online marketing in Arnhem"></a>
+        <a class="wordpress" href="http://wordpress.org/extend/plugins/twitterfontana-widget/" target="_blank"><img src="img/wordpress.png" width="20" height="20" alt="Wordpress"></a>
     </div>
 
     <ul class="tools">
-        <li><a href="#" class="settings" title="Settings"><span>Settings</span></a></li>
-        <li><a href="#" class="fullscreen" title="Fullscreen"><span>Fullscreen</span></a></li>
+        <li class="settings"><a href="#" title="Settings"><span>Settings</span></a></li>
+        <li class="fullscreen"><a href="#" title="Fullscreen"><span>Fullscreen</span></a></li>
     </ul>
 </header>
 
 <div id="twitter-fontana"></div>
 
-<footer></footer>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+<footer id="footer"></footer>
+
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <!-- scripts concatenated
 <script src="js/fontana.base.min.js?build={{BUILDID}}"></script>
 <script src="js/fontana.config.min.js?build={{BUILDID}}"></script>
 /scripts concatenated -->
 <!-- scripts development -->
-<script src="js/lib/respond.js"></script>
+<!--<script src="js/lib/respond.js"></script>-->
 <script src="js/lib/jquery.tmpl-1.0.0pre.min.js"></script>
 <script src="js/lib/transformjs.1.0.beta.2.min.js"></script>
 <script src="js/lib/microevent-1.0.0.min.js"></script>
