--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,13 @@
     <div class="logos">
         <a class="github" href="https://github.com/EightMedia/TwitterFontana" target="_blank" title="Fork Twitter Fontana on GitHub"><img src="img/github.png" width="46" height="20" alt="GitHub"></a>
         <a class="eight" href="http://www.eight.nl/" target="_blank"><img src="img/eight.png" width="55" height="20" alt="Eight Media Internetbureau Arnhem" title="Webdesign &amp; Internet marketing in Arnhem"></a>
+        <a class="wordpress" href="http://wordpress.org/extend/plugins/twitterfontana-widget/" target="_blank"><img src="img/wordpress.png" width="20" height="20" alt="Wordpress"></a>
     </div>
 
     <ul class="tools">
-        <li>
-            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://twitterfontana.com" data-text="Clean, fully customizable, Twitter fountain without Flash" data-related="tweetfontana" data-hashtags="twitterfontana">Tweet</a>
-        </li>
-        <li><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Ftwitterfontana&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=segoe+ui&amp;height=21&amp;appId=202320067644&amp;locale=en_US" scrolling="no" frameborder="0" allowTransparency="true"></iframe></li>
-        <li><a href="#" class="fullscreen" title="Fullscreen"><span>Fullscreen</span></a></li>
+        <li class="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://twitterfontana.com" data-text="Clean, fully customizable, Twitter fountain without Flash" data-related="tweetfontana" data-hashtags="twitterfontana">Tweet</a></li>
+        <li class="facebook"><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Ftwitterfontana&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=segoe+ui&amp;height=21&amp;appId=202320067644&amp;locale=en_US" scrolling="no" frameborder="0" allowTransparency="true"></iframe></li>
+        <li class="fullscreen"><a href="#" title="Fullscreen"><span>Fullscreen</span></a></li>
     </ul>
 </header>
 
