new welcome demo message about the wordpress plugin

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,12 @@
         <q>Clean backchannel visualizations without Flash, so it works on my iPad. Finally! #TwitterFontana</q>
         <cite>stetelepta</cite>
     </div>
+
+    <div class="fontana-message">
+        <q>We just released a wordpress plugin for Twitter Fontana. Now create beautiful twitter visualizations on your blog!</q>
+        <cite>tweetfontana</cite>
+    </div>
+
 </div>
 
 <section id="start">
