wordpress plugin demo message now at the start and includes an url

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,11 @@
 
 <div id="twitter-fontana">
     <div class="fontana-message">
+        <q>We just released a wordpress plugin for Twitter Fontana. Now create beautiful twitter visualizations on your blog! http://tinyurl.com/8rzlre2</q>
+        <cite>tweetfontana</cite>
+    </div>
+
+    <div class="fontana-message">
         <q>Yay, I'm using #TwitterFontana to display all tweets about my #awesome #conference on a huge screen!</q>
         <cite>aratramba</cite>
     </div>
@@ -57,11 +62,6 @@
     <div class="fontana-message">
         <q>Clean backchannel visualizations without Flash, so it works on my iPad. Finally! #TwitterFontana</q>
         <cite>stetelepta</cite>
-    </div>
-
-    <div class="fontana-message">
-        <q>We just released a wordpress plugin for Twitter Fontana. Now create beautiful twitter visualizations on your blog!</q>
-        <cite>tweetfontana</cite>
     </div>
 
 </div>
