--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Create visual engaging Twitter Walls with Twitter Fontana, display Tweets at conferences and other public events</title>
+    <title>Create visually engaging Twitter Walls with Twitter Fontana, display Tweets at conferences and other public events</title>
     <meta name="description" content="With Twitter Fontana you can display Tweets on a big screen or a wall. It's a free &amp; open source Twitter Fountain alternative with great customisation options.">
     <script src="js/lib/modernizr.js"></script>
     <link rel="stylesheet" href="css/all.css?build={{BUILDID}}">
@@ -21,8 +21,8 @@
     <h1 class="logo"><a href="http://twitterfontana.com/">Twitter Fontana</a></h1>
 
     <div class="logos">
+        <a class="eight" href="http://www.eight.nl/" target="_blank"><img src="img/eight.png" width="75" height="27" alt="Eight Media Internetbureau Arnhem" title="Webdesign &amp; Internet marketing in Arnhem"></a>
         <a class="github" href="https://github.com/EightMedia/TwitterFontana" target="_blank" title="Fork Twitter Fontana on GitHub"><img src="img/github.png" width="46" height="20" alt="GitHub"></a>
-        <a class="eight" href="http://www.eight.nl/" target="_blank"><img src="img/eight.png" width="55" height="20" alt="Eight Media Internetbureau Arnhem" title="Webdesign &amp; Internet marketing in Arnhem"></a>
         <a class="wordpress" href="http://wordpress.org/extend/plugins/twitterfontana-widget/" target="_blank"><img src="img/wordpress.png" width="20" height="20" alt="Wordpress"></a>
     </div>
 
