There's now a pause button (in non-fullscreen mode). Made the animation rescheduling take the duration of the pause in account, so resuming should be faster.

--- a/src/fountain.html
+++ b/src/fountain.html
@@ -28,6 +28,7 @@
 
     <ul class="tools">
         <li class="settings"><a href="#" title="Settings"><span>Settings</span></a></li>
+        <li class="pause"><a href="#" title="Pause"><span>Pause</span></a></li>
         <li class="fullscreen"><a href="#" title="Fullscreen"><span>Fullscreen</span></a></li>
     </ul>
 </header>
