--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
     <ul class="tools">
         <li class="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://twitterfontana.com" data-text="Clean, fully customizable, Twitter fountain without Flash" data-related="tweetfontana" data-hashtags="twitterfontana">Tweet</a></li>
         <li class="facebook"><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Ftwitterfontana&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=segoe+ui&amp;height=21&amp;appId=202320067644&amp;locale=en_US" scrolling="no" frameborder="0" allowTransparency="true"></iframe></li>
+        <li class="pause"><a href="#" title="Pause"><span>Pause</span></a></li>
         <li class="fullscreen"><a href="#" title="Fullscreen"><span>Fullscreen</span></a></li>
     </ul>
 </header>
