Changed some words here and there

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <title>Create visually engaging Twitter Walls with Twitter Fontana, display Tweets at conferences and other public events</title>
-    <meta name="description" content="With Twitter Fontana you can display Tweets on a big screen or a wall. It's a free &amp; open source Twitter Fountain alternative with great customisation options.">
+    <meta name="description" content="With Twitter Fontana you can display Tweets on a big screen or a wall. It's a free &amp; open source and has great customisation options.">
     <script src="js/lib/modernizr.js"></script>
     <link rel="stylesheet" href="css/all.css?build={{BUILDID}}">
     <link href="js/lib/farbtastic/farbtastic.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Twitter Fontana">
-    <meta property="og:description" content="With Twitter Fontana you can display Tweets on a big screen or a wall. It's a free &amp; open source Twitter Fountain alternative with great customisation options.">
+    <meta property="og:description" content="With Twitter Fontana you can display Tweets on a big screen or a wall. It's a free &amp; open source and has great customisation options.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://twitterfontana.com">
     <meta property="og:image" content="http://twitterfontana.com/img/twitterfontana.png">
@@ -36,7 +36,7 @@
 
 <div id="twitter-fontana">
     <div class="fontana-message">
-        <q>We just released a wordpress plugin for Twitter Fontana. Now create beautiful twitter visualizations on your blog! http://tinyurl.com/8rzlre2</q>
+        <q>We just released a Wordpress plugin for Twitter Fontana. Show beautiful visual tweets on your blog! http://tinyurl.com/8rzlre2 </q>
         <cite>tweetfontana</cite>
     </div>
 
@@ -46,7 +46,7 @@
     </div>
 
     <div class="fontana-message">
-        <q>Beautiful, fully customizable, (fullscreen) real time display of Tweets: #TwitterFontana</q>
+        <q>Beautiful, fully customizable, (fullscreen) real time Twitter wall: #TwitterFontana</q>
         <cite>danielspronk</cite>
     </div>
 
