--- a/src/fountain.html
+++ b/src/fountain.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <title>Create your own Twitter Wall with Twitter Fontana</title>
-    <meta name="description" content="With Twitter Fontana you can display Tweets on a big screen or a wall. It's a free &amp; open source Twitter Fountain alternative with great customisation options.">
+    <meta name="description" content="Twitter Fontana shows visual tweets on a big screen (twitter wall) or embedded in your site. It's a free &amp; open source Twitter fountain with great customisation options.">
     <script src="js/lib/modernizr.js"></script>
     <link rel="stylesheet" href="css/all.css?build={{BUILDID}}">
     <link href="js/lib/farbtastic/farbtastic.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Twitter Fontana">
-    <meta property="og:description" content="With Twitter Fontana you can display Tweets on a big screen or a wall. It's a free &amp; open source Twitter Fountain alternative with great customisation options.">
+    <meta property="og:description" content="Twitter Fontana shows visual tweets on a big screen (twitter wall) or embedded in your site. It's a free &amp; open source Twitter fountain with great customisation options.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://twitterfontana.com">
     <meta property="og:image" content="http://twitterfontana.com/img/twitterfontana.png">
