Made the flask app the defacto dev env, moving source around.

--- a/src/static/crowdconvergence.html
+++ b/src/static/crowdconvergence.html
@@ -5,7 +5,7 @@
     <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/lib/modernizr.js"></script>
-    <link rel="stylesheet" href="css/all.css?build={{BUILDID}}">
+    <link rel="stylesheet" href="css/all.css">
     <link href="js/lib/farbtastic/farbtastic.css" rel="stylesheet">
     <style>
         #settingsForm, #embedForm { display: none; }
