--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,7 +4,7 @@
     <title>Create visually engaging Twitter Walls with Twitter Fontana, display Tweets at conferences and other public events</title>
     <meta name="description" content="With Twitter Fontana you can display Tweets on a big screen or a wall. It's a free &amp; open source and has great customisation options.">
     <script src="js/lib/modernizr.js"></script>
-    <link rel="stylesheet" href="css/all.css?build={{BUILDID}}">
+    <link rel="stylesheet" href="css/all.css">
     <link href="js/lib/farbtastic/farbtastic.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Twitter Fontana">
@@ -36,33 +36,28 @@
 
 <div id="twitter-fontana">
     <div class="fontana-message">
-        <q>We just released a Wordpress plugin for Twitter Fontana. Show beautiful visual tweets on your blog! http://tinyurl.com/8rzlre2 </q>
-        <cite>tweetfontana</cite>
-    </div>
-
-    <div class="fontana-message">
         <q>Yay, I'm using #TwitterFontana to display all tweets about my #awesome #conference on a huge screen!</q>
-        <cite>aratramba</cite>
+        <cite data-profile-image-url="https://si0.twimg.com/profile_images/46801612/twitter_avatar_bigger.jpg">aratramba</cite>
     </div>
 
     <div class="fontana-message">
         <q>Beautiful, fully customizable, (fullscreen) real time Twitter wall: #TwitterFontana</q>
-        <cite>danielspronk</cite>
+        <cite data-profile-image-url="https://si0.twimg.com/profile_images/1237768637/NewAvatar_bigger.png">danielspronk</cite>
     </div>
 
     <div class="fontana-message">
         <q>Customise #TwitterFontana in your browser. Not enough options? We @eightmedia can help you, or fork the code https://t.co/mimJdXcT (github)</q>
-        <cite>jorikdelaporik</cite>
+        <cite data-profile-image-url="https://si0.twimg.com/profile_images/3424369351/f7876a85a837e65f54fafd0c1d54edb8_bigger.png">jorikdelaporik</cite>
     </div>
 
     <div class="fontana-message">
         <q>#TwitterFontana is completely free &amp; open source (on github). It's flexible and built using modern web technology: #js, #html5 &amp; #css3</q>
-        <cite>jaap3</cite>
+        <cite data-profile-image-url="https://si0.twimg.com/profile_images/2182157043/f02c5f7ac4e4a07fd8da786d9279bea1_bigger.png">jaap3</cite>
     </div>
 
     <div class="fontana-message">
         <q>Clean backchannel visualizations without Flash, so it works on my iPad. Finally! #TwitterFontana</q>
-        <cite>stetelepta</cite>
+        <cite data-profile-image-url="https://si0.twimg.com/profile_images/1539639543/089b746_bigger.jpeg">stetelepta</cite>
     </div>
 
 </div>
