--- a/src/static/fountain.html
+++ b/src/static/fountain.html
@@ -4,7 +4,7 @@
     <title>Create your own Twitter Wall with Twitter Fontana</title>
     <meta name="description" content="Twitter Fontana shows visual tweets on a big screen (twitter wall) or embedded in your site. It's a free &amp; open source Twitter fountain with great customisation options.">
     <script src="js/lib/modernizr.js"></script>
-    <link rel="stylesheet" href="css/all.css?build={{BUILDID}}">
+    <link rel="stylesheet" href="css/all.css">
     <link href="js/lib/farbtastic/farbtastic.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Twitter Fontana">
